--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009",
+    "storybook-dev": "start-storybook -p 9009 public --no-dll",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
@@ -86,12 +87,14 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "@types/storybook-react-router": "^1.0.2",
     "babel-plugin-named-exports-order": "^0.0.2",
     "jest-image-snapshot": "^6.1.0",
     "jest-puppeteer": "^6.2.0",
     "prop-types": "^15.8.1",
     "puppeteer": "^19.4.1",
     "start-server-and-test": "^1.15.2",
+    "storybook-react-router": "^1.0.8",
     "webpack": "^5.75.0"
   }
 }
